// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznxsB bGkCwP"
>
  <li
    className="sc-fzoXzr jOxDNA"
  >
    <span
      className="sc-fzoLsD ctijiA"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoXzr jOxDNA"
  >
    <span
      className="sc-fzoLsD ctijiA"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoXzr jOxDNA"
  >
    <span
      className="sc-fzoLsD ctijiA"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznxsB bGkCwP"
>
  <li
    className="sc-fzoXzr sc-fzpjYC iSsoLc"
  >
    <span
      className="sc-fzoLsD ctijiA"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoXzr sc-fzpjYC iSsoLc"
  >
    <span
      className="sc-fzoLsD ctijiA"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoXzr sc-fzpjYC iSsoLc"
  >
    <span
      className="sc-fzoLsD ctijiA"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
